--- a/templates/pages/scan.html
+++ b/templates/pages/scan.html
@@ -18,7 +18,7 @@
         <label for="barcode">Enter a barcode: </label>
         <input type="search" id="search" name="barcode" required
             pattern="[A-Fa-f0-9]{8}">
-        <button>go</button>
+        <button name="_hide_sql" value="1">go</button>
     </form>
 </body>
 </html>
