Small code style change
When there's a single non-error ("happy") execution path in the code,
it's usually clearer to lift that out of a nested block and guard it
with conditionals.  The error paths come first, but the happy path is
still emphasized more by being unindented.

On the other hand, when there's more than one happy path, it's usually
clearer to push them all into the same mutually-exclusive conditional
and put error paths last.  This emphasizes the variety of happy paths
and that there isn't a single one.

--- a/templates/pages/dial.html
+++ b/templates/pages/dial.html
@@ -99,21 +99,21 @@
       const result = await response.json();
       const resultCount = result.rows.length;
 
-      if (resultCount === 0)
-        throw exception("No result rows", result);
+      if (resultCount === 1) {
+        const recordLink = JSON.parse(result.rows[0].record).href;
 
-      if (resultCount > 1) {
-        window.open(`${formAction}?${params}`);
-        return;
+        if (!recordLink)
+          throw exception("No link for record", result);
+
+        console.log(`Opening ${recordLink}`);
+        window.open(recordLink);
       }
-
-      const recordLink = JSON.parse(result.rows[0].record).href;
-
-      if (!recordLink)
-        throw exception("No link for record", result);
-
-      console.log(`Opening ${recordLink}`);
-      window.open(recordLink);
+      else if (resultCount > 1) {
+        window.open(`${formAction}?${params}`);
+      }
+      else {
+        throw exception("No result rows", result);
+      }
     }
 
     // XXX TODO: This could be more sophisticated, but for now it suffices to
