Use relative paths to make the application portable
We're going to serve this application under /switchboard/ on the
backoffice.

--- a/templates/pages/dial.html
+++ b/templates/pages/dial.html
@@ -51,14 +51,14 @@
 </head>
 <body>
 <nav>
-  <a href="/">home</a>
+  <a href=".">home</a>
 </nav>
 <main>
   <h1>SCAN Switchboard</h1>
 
   <p>Operators are standing by!</p>
 
-  <form action="/scan-redcap/lookup-barcode" method="get">
+  <form action="scan-redcap/lookup-barcode" method="get">
     <input type="hidden" name="_hide_sql" value="1">
     <input type="search"
       id="barcode"
