--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <h1 style="padding-left: 10px; border-left: 10px solid blue">
-  SCAN Switchboard
+  SFS Switchboard
 </h1>
 <h2><a href="dial">Dial a barcode</a></h2>
-<h2><a href="scan-redcap">Browse the data</a></h2>
+<h2><a href="sfs-redcap">Browse the data</a></h2>
 {% endblock %}
