--- a/templates/pages/dial.html
+++ b/templates/pages/dial.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SCAN Switchboard</title>
+  <title>SFS Switchboard</title>
   <style>
     /* Copied from Datasette's default styles for body */
     body {
@@ -54,11 +54,11 @@
   <a href=".">home</a>
 </nav>
 <main>
-  <h1>SCAN Switchboard</h1>
+  <h1>SFS Switchboard</h1>
 
   <p>Operators are standing by!</p>
 
-  <form action="scan-redcap/lookup-barcode" method="get">
+  <form action="sfs-redcap/lookup-barcode" method="get">
     <input type="hidden" name="_hide_sql" value="1">
     <input type="search"
       id="barcode"
