--- a/templates/pages/dial.html
+++ b/templates/pages/dial.html
@@ -8,13 +8,14 @@
     body {
       margin: 0;
       padding: 0;
+      border: 0;
       font-family: "Helvetica Neue", sans-serif;
       font-size: 1rem;
       font-weight: 400;
       line-height: 1.5;
-      color: #212529;
+      color: #111A35;
       text-align: left;
-      background-color: #fff;
+      background-color: #F8FAFB;
     }
 
     /* Styles for the dialer */
@@ -35,24 +36,50 @@
       color: red;
     }
 
-    /* Copied from Datasette's default styles for .hd */
-    nav {
-        border-bottom: 2px solid #ccc;
-        padding: 0.2em 1em;
-        background-color: #eee;
+    /* Copied from Datasette's default styles for <header> */
+    header {
+        padding: 0.6rem 1rem 0.5rem 1rem;
+        background-color: #276890;
+        color: rgba(255,255,244,0.9);
         overflow: hidden;
         box-sizing: border-box;
-        min-height: 2rem;
+        min-height: 2.6rem;
     }
-    nav :link {
+    header p {
+        margin: 0;
+        padding: 0;
+    }
+    header .crumbs {
+        float: left;
+    }
+
+    header a:link,
+    header a:visited,
+    header a:hover,
+    header a:focus,
+    header a:active,
+    header button.button-as-link {
+        color: rgba(255,255,244,0.8);
         text-decoration: none;
+    }
+
+    header a:hover,
+    header a:focus,
+    header a:active,
+    button.button-as-link:hover,
+    button.button-as-link:focus {
+      color: rgba(255,255,244,1);
     }
   </style>
 </head>
 <body>
-<nav>
-  <a href=".">home</a>
-</nav>
+<header>
+  <nav>
+    <p class="crumbs">
+      <a href=".">home</a>
+    </p>
+  </nav>
+</header>
 <main>
   <h1>SFS Switchboard</h1>
 
